--- a/assets/style/style.sass
+++ b/assets/style/style.sass
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined")
 .id-validator-info
   width: 80%
   margin: 5px auto
