--- a/assets/style/style.sass
+++ b/assets/style/style.sass
@@ -1,11 +1,32 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined")
 .id-validator-info
   width: 80%
-  margin: 5px auto
+  margin: 0px auto
   max-width: 600px
   min-width: 30px
   text-align: center
+  font-weight: 600
   table
-    tr 
+    tr
       .id-name
         width: 30%
+        color: #8189de
+      .id-value
+        color: #418b3b
+
+.id-validator-head
+  text-align: center
+  margin-top: 15px
+  margin-bottom: 5px
+  span
+    position: relative
+    font-size: 40px
+    top:6px
+  h2
+    display: inline
+
+.id-validator-found
+  color: green
+
+.id-validator-not-found
+  color: red
