--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,13 +1,40 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
 .id-validator-info {
   width: 80%;
-  margin: 5px auto;
+  margin: 0px auto;
   max-width: 600px;
   min-width: 30px;
   text-align: center;
+  font-weight: 600;
 }
 .id-validator-info table tr .id-name {
   width: 30%;
+  color: #8189de;
+}
+.id-validator-info table tr .id-value {
+  color: #418b3b;
+}
+
+.id-validator-head {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+.id-validator-head span {
+  position: relative;
+  font-size: 40px;
+  top: 6px;
+}
+.id-validator-head h2 {
+  display: inline;
+}
+
+.id-validator-found {
+  color: green;
+}
+
+.id-validator-not-found {
+  color: red;
 }
 
 /*# sourceMappingURL=style.css.map */
